Added thesis manuscript

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     />
     <meta
       name="description"
-      content="Your Name — portfolio, projects, and experience."
+      content="André Jørgensen — MSc Eng. in Bioinformatics and Systems Biology. Reproducible HPC pipelines, pangenomics, and NGS analysis."
     />
-    <title>Your Name — Portfolio</title>
+    <title>André Jørgensen — Bioinformatics</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -19,12 +19,14 @@
     <header class="site-header">
       <div class="container">
         <nav aria-label="Primary">
-          <a class="brand" href="#">Your Name</a>
+          <a class="brand" href="#">André Jørgensen</a>
           <ul class="nav">
-            <li><a href="#about">About</a></li>
+            <li><a href="#about">Profile</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#languages">Languages</a></li>
+            <li><a href="#interests">Interests</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -34,19 +36,20 @@
     <main id="main">
       <section class="hero">
         <div class="container">
-          <h1>Your Name</h1>
+          <h1>André Jørgensen</h1>
           <p class="tagline">
-            Role or headline — e.g., Full‑stack Developer focused on
-            TypeScript, React, and cloud.
+            MSc Eng. in Bioinformatics and Systems Biology • Reproducible HPC
+            pipelines, pangenomics, and NGS analysis. Based in Hvidovre,
+            Denmark.
           </p>
           <div class="cta">
             <a class="btn btn-primary" href="#contact">Contact me</a>
             <a
               class="btn"
-              href="assets/resume.pdf"
+              href="assets/thesis.pdf"
               target="_blank"
               rel="noopener noreferrer"
-              >Download resume</a
+              >Download thesis</a
             >
           </div>
         </div>
@@ -54,13 +57,77 @@
 
       <section id="about" class="section">
         <div class="container">
-          <h2>About</h2>
+          <h2>Profile</h2>
           <p>
-            Short summary about you. Example: I'm a software engineer with 5+
-            years of experience building reliable web apps. I enjoy shipping
-            features end‑to‑end, mentoring, and improving developer
-            experience.
+            MSc Eng. in Bioinformatics and Systems Biology with hands-on
+            experience building reproducible HPC pipelines and pangenomic
+            analyses for genomic data. Motivated by questions in evolutionary
+            biology and extinction; keen to improve genomic inference from
+            degraded/low-quality DNA by reducing reference bias and increasing
+            accuracy.
           </p>
+          <p>
+            Proficient in Python, R, Bash, and Snakemake; experienced with
+            containerization and large-scale data analysis on clusters. Strong
+            statistical analysis and visualization skills, and clear written and
+            spoken English. I also enjoy bouldering and like participating in
+            international communities.
+          </p>
+        </div>
+      </section>
+
+      <section id="education" class="section">
+        <div class="container">
+          <h2>Education</h2>
+
+          <article class="xp">
+            <header class="xp-head">
+              <h3>
+                Technical University of Denmark (DTU) — MSc Eng., Bioinformatics
+                and Systems Biology
+              </h3>
+              <span class="meta">2022 — 2024</span>
+            </header>
+            <ul class="xp-points">
+              <li>
+                Thesis: Optimizing Mitochondrial Genome Alignment using Advanced
+                Pangenomic Techniques on HPC clusters. Mail me for the full thesis.
+                (<a
+                  href="assets/manuscript.pdf"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >PDF</a
+                >)
+              </li>
+              <li>
+                Implemented scalable and reproducible pipelines using Snakemake,
+                Python, Bash, and R for large-scale data analysis on HPC
+              </li>
+              <li>
+                Coursework: Metagenomics, HPC in Life Sciences, Deep Learning,
+                GMP
+              </li>
+            </ul>
+          </article>
+
+          <article class="xp">
+            <header class="xp-head">
+              <h3>
+                Technical University of Denmark (DTU) — BSc, Biotechnology
+              </h3>
+              <span class="meta">2018 — 2022</span>
+            </header>
+            <ul class="xp-points">
+              <li>
+                Bachelor Project: A Pipeline for Efficient Transcript Isoform
+                Annotation built on an HPC cluster
+              </li>
+              <li>
+                Courses in Algorithms and Data Structures, Probability Theory,
+                and Molecular Biology
+              </li>
+            </ul>
+          </article>
         </div>
       </section>
 
@@ -70,86 +137,55 @@
 
           <article class="xp">
             <header class="xp-head">
-              <h3>Senior Developer · Company Name</h3>
-              <span class="meta">2022 — Present · City, Country</span>
+              <h3>
+                Software Development &amp; Bioinformatic Analysis ·
+                Personal/Academic Projects
+              </h3>
+              <span class="meta">2018 — Present · Remote / Lyngby, Denmark</span>
             </header>
-            <p class="xp-summary">
-              One‑sentence overview of your impact in this role.
-            </p>
             <ul class="xp-points">
               <li>
-                Led X project, improving Y metric by Z% using A, B, and C.
+                Designed, developed, and containerized Python/R/Snakemake
+                workflows for NGS data processing on HPC and cloud; included
+                clear READMEs and reproducible environments
               </li>
-              <li>Collaborated with N engineers; mentored M juniors.</li>
+              <li>
+                Optimized mitochondrial genome alignment using pangenomic
+                techniques (thesis); automated benchmarking across references
+                and parameters on HPC
+              </li>
+              <li>
+                Conducted antimicrobial resistance profiling of pig metagenomes
+                from short-read data and produced QC and summary reports
+              </li>
+              <li>
+                Investigated treatment effects in melanoma cell line datasets
+                using R and tidyverse with reproducible analysis notebooks
+              </li>
+              <li>
+                Built a web text-mining and ML project (BeautifulSoup + Python)
+                for price prediction and experimented with language models for
+                long-form QA
+              </li>
             </ul>
           </article>
 
           <article class="xp">
             <header class="xp-head">
-              <h3>Developer · Company Name</h3>
-              <span class="meta">2020 — 2022 · City, Country</span>
+              <h3>Various Roles · Volunteering</h3>
+              <span class="meta">2016 — Present · Denmark</span>
             </header>
-            <p class="xp-summary">
-              One‑sentence overview of your focus in this role.
-            </p>
             <ul class="xp-points">
-              <li>Shipped feature X used by Y users.</li>
-              <li>Reduced build times by Z% via tooling improvements.</li>
+              <li>
+                Roskilde Festival (beer stand), Bastard Café (board game guru),
+                Tårnby Teater (youth instructor)
+              </li>
+              <li>
+                Treasurer at DSU Hvidovre-Brøndby, Board member at DTU Board
+                Game Club
+              </li>
             </ul>
           </article>
-        </div>
-      </section>
-
-      <section id="projects" class="section">
-        <div class="container">
-          <h2>Projects</h2>
-          <div class="grid">
-            <article class="card">
-              <h3>Project One</h3>
-              <p>
-                Brief description of what it does and your contribution.
-              </p>
-              <ul class="tags">
-                <li>TypeScript</li>
-                <li>React</li>
-                <li>Node</li>
-              </ul>
-              <div class="links">
-                <a
-                  href="https://github.com/your-username/project-one"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Code</a
-                >
-                <a
-                  href="https://project-one.example.com"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Live</a
-                >
-              </div>
-            </article>
-
-            <article class="card">
-              <h3>Project Two</h3>
-              <p>
-                One or two lines that highlight outcomes or metrics.
-              </p>
-              <ul class="tags">
-                <li>Python</li>
-                <li>FastAPI</li>
-                <li>Postgres</li>
-              </ul>
-              <div class="links">
-                <a
-                  href="https://github.com/your-username/project-two"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Code</a
-                >
-              </div>
-            </article>
-          </div>
         </div>
       </section>
 
@@ -157,14 +193,50 @@
         <div class="container">
           <h2>Skills</h2>
           <ul class="tags">
-            <li>JavaScript</li>
-            <li>TypeScript</li>
-            <li>React</li>
-            <li>Node.js</li>
             <li>Python</li>
+            <li>Unix</li>
+            <li>R</li>
             <li>SQL</li>
-            <li>AWS</li>
-            <li>CI/CD</li>
+            <li>Bash</li>
+            <li>Snakemake</li>
+            <li>Pandas</li>
+            <li>TensorFlow</li>
+            <li>PyTorch</li>
+            <li>BeautifulSoup</li>
+            <li>Git</li>
+            <li>Unit testing</li>
+            <li>Docker/Singularity</li>
+            <li>Statistical analysis</li>
+            <li>Data visualization</li>
+            <li>Machine learning</li>
+            <li>Large-scale data handling</li>
+            <li>NGS data processing</li>
+            <li>Metagenomics</li>
+            <li>Pangenomic alignment</li>
+            <li>Reproducible HPC workflows</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="languages" class="section">
+        <div class="container">
+          <h2>Languages</h2>
+          <p>English (Fluent), Danish (Native)</p>
+        </div>
+      </section>
+
+      <section id="interests" class="section">
+        <div class="container">
+          <h2>Interests</h2>
+          <ul>
+            <li>
+              Palaeogenomics, Evolutionary Genomics, Population Genomics,
+              Biodiversity/Extinction
+            </li>
+            <li>
+              Data Science, Machine Learning, Novel Applications of Technology
+            </li>
+            <li>Board Games, Music, Logic Puzzles</li>
           </ul>
         </div>
       </section>
@@ -174,29 +246,27 @@
           <h2>Contact</h2>
           <p>
             Email:
-            <a href="mailto:you@example.com">you@example.com</a>
+            <a href="mailto:andrerosenj@gmail.com">andrerosenj@gmail.com</a>
+          </p>
+          <p>Location: Hvidovre, Denmark</p>
+          <p>
+            Phone:
+            <a href="tel:+4541299343">+45 41 29 93 43</a>
           </p>
           <p>
             Links:
             <a
-              href="https://www.linkedin.com/in/your-handle"
+              href="https://www.linkedin.com/in/andré-rosengaard-jørgensen"
               target="_blank"
               rel="noopener noreferrer"
               >LinkedIn</a
             >
             ·
             <a
-              href="https://github.com/your-username"
+              href="https://github.com/whelixw"
               target="_blank"
               rel="noopener noreferrer"
               >GitHub</a
-            >
-            ·
-            <a
-              href="https://your-username.github.io"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Website</a
             >
           </p>
         </div>
@@ -206,7 +276,7 @@
     <footer class="site-footer">
       <div class="container">
         <small>
-          © <span id="year"></span> Your Name. All rights reserved.
+          © <span id="year"></span> André Jørgensen. All rights reserved.
         </small>
       </div>
     </footer>
