corrected thesis manuscript link and description

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <a class="btn btn-primary" href="#contact">Contact me</a>
             <a
               class="btn"
-              href="assets/thesis.pdf"
+              href="assets/manuscript.pdf"
               target="_blank"
               rel="noopener noreferrer"
-              >Download thesis</a
+              >Download master thesis manuscript</a
             >
           </div>
         </div>
