--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
               target="_blank"
               rel="noopener noreferrer"
               >Download master thesis manuscript</a
+            > <a
+              class="btn"
+              href="assets/thesis_final.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Download master thesis</a
             >
           </div>
         </div>
@@ -93,7 +99,7 @@
                 Thesis: Optimizing Mitochondrial Genome Alignment using Advanced
                 Pangenomic Techniques on HPC clusters. Mail me for the full thesis.
                 (<a
-                  href="assets/manuscript.pdf"
+                  href="assets/thesis_final .pdf"
                   target="_blank"
                   rel="noopener noreferrer"
                   >PDF</a
