removed "mail me"

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <ul class="xp-points">
               <li>
                 Thesis: Optimizing Mitochondrial Genome Alignment using Advanced
-                Pangenomic Techniques on HPC clusters. Mail me for the full thesis.
+                Pangenomic Techniques on HPC clusters.
                 (<a
                   href="assets/thesis_final .pdf"
                   target="_blank"
